--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,3 +1,10 @@
+@import './breakpoints';
+@import './mixins';
+@import './functions';
 @import './normalize';
 @import './base';
 @import './typography';
+@import './grid';
+@import './flex-layout';
+@import './structure';
+@import './utilities';
