--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -5,6 +5,8 @@
 @import './base';
 @import './typography';
 @import './grid';
+@import './movies';
 @import './flex-layout';
 @import './structure';
 @import './utilities';
+@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
