--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -1,26 +1,47 @@
 h1,
 .h1 {
-  color: #333;
-  font-size: 2rem;
-  margin-top: 1rem;
+  font-size: 3.5rem;
+  line-height: 4.125rem;
+}
+
+h2, .h2 {
+  font-size: 2.5rem;
+  line-height: 2.875rem;
+}
+
+h3, .h3 {
+  font-size: 1.75rem;
+  line-height: 2.125rem;
+}
+
+h4, .h4 {
+  font-size: 1.375rem;
+  line-height: 1.625rem;
+}
+
+h5, .h5 {
+  font-size: 1.125rem;
+  line-height: 1.625rem;
+}
+
+h6, .h6 {
+  font-size: 1.125rem;
+  line-height: 1.625rem;
 }
 
 p {
-  color: #666;
   font-size: 1rem;
-  margin-top: 0.2rem;
+  line-height: 1.5rem;
 }
 
-h2 {
-  margin-top: 1rem;
-  font-size:1.6rem;
-  margin-bottom:1rem;
+p.small {
+  font-size: 0.625rem;
+  line-height: 0.9375rem;
 }
 
-h3 {
-  margin-top: 1rem;
-  font-size:1.2rem;
-  margin-bottom:1rem;
+.call-out {    
+  font-size: 1.5rem;
+  line-height: 2.125rem;
 }
 
 .ta {
